<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Frm_RegistroDatosPersonales"
    android:background="@drawable/fondo_amarillo">

    <ve.com.zuprevencion.zutrackinggps.AutoResizeTextView
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:id="@+id/lblTituloRegistro"
        android:text="@string/formulario_de_registro"
        android:gravity="center_horizontal|center_vertical"
        android:textSize="18sp"
        android:textStyle="bold"
        android:background="#0C8DA1"/>

    <ve.com.zuprevencion.zutrackinggps.AutoResizeTextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:id="@+id/lblDatosPersonales"
        android:text="@string/datos_acceso"
        android:gravity="center_horizontal|center_vertical"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="#ffee00"
        android:background="#001499"
        android:layout_below="@id/lblTituloRegistro"
        android:layout_margin="10dp"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lblDatosPersonales">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/linlayFormulario"
            android:paddingTop="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp">
                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:id="@+id/txtEmail"
                    android:inputType="textEmailAddress"
                    android:hint="@string/hint_correo_electronico"
                    android:textColor="#000000"
                    android:lines="1"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:id="@+id/txtPassword"
                    android:inputType="textPassword"
                    android:hint="@string/hint_contraseña"
                    android:textColor="#000000"
                    android:lines="1"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:id="@+id/txtConfirmPassword"
                    android:inputType="textPassword"
                    android:hint="@string/confirmar_clave"
                    android:textColor="#000000"
                    android:lines="1"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"/>
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
    </ScrollView>

    <ve.com.zuprevencion.zutrackinggps.AutoResizeTextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:id="@+id/btnEnviarDatos"
        android:text="@string/EnviarDatos"
        android:textStyle="bold"
        android:textColor="#FFFFFF"
        android:gravity="center_horizontal|center_vertical"
        android:textSize="18sp"
        android:background="@drawable/button_background"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="5dp"/>
</RelativeLayout>
