<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    tools:context="ve.com.zuprevencion.zutrackinggps.Frm_Login"
    android:background="@drawable/fondo_amarillo">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layTituloLogin"
        android:background="#0C8DA1">

        <ve.com.zuprevencion.zutrackinggps.AutoResizeTextView
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:id="@+id/lblTitulo"
            android:text="@string/web_site"
            android:gravity="center_horizontal|center_vertical"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <Button
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:background="@drawable/menu_icon"
            android:id="@+id/btnMenu"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"/>
    </RelativeLayout>

    <android.support.v4.widget.DrawerLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/drawer_layout_login"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:layout_below="@+id/layTituloLogin">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:id="@+id/imgLogo"
                android:src="@drawable/logo"
                android:layout_marginBottom="10dp"
                android:scaleType="fitCenter"
                android:contentDescription="@string/app_name"/>

            <LinearLayout
                android:id="@+id/login_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="16dp"
                android:layout_below="@+id/imgLogo">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/txtEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_correo_electronico"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:singleLine="true"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/txtPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_contraseña"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:singleLine="true"/>
                </android.support.design.widget.TextInputLayout>

                <ve.com.zuprevencion.zutrackinggps.AutoResizeTextView
                    android:id="@+id/btnIniciarSesion"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="50dp"
                    android:text="@string/text_iniciar_sesion"
                    android:textStyle="bold"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp"
                    android:gravity="center_horizontal|center_vertical"
                    android:background="@drawable/button_background"/>

                <ve.com.zuprevencion.zutrackinggps.AutoResizeTextView
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="16dp"
                    android:id="@+id/btnRegistrar"
                    android:text="@string/text_crear_cuenta"
                    android:textStyle="bold"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp"
                    android:gravity="center_horizontal|center_vertical"
                    android:background="@drawable/button_background"/>
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/login_form">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:id="@+id/imgDemo"
                    android:contentDescription="@string/content_ver_demo"
                    android:scaleType="centerInside"
                    android:src="@drawable/background_demo_button"
                    android:layout_alignParentBottom="true"/>

                <ve.com.zuprevencion.zutrackinggps.AutoResizeTextView
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:text="@string/content_ver_demo"
                    android:textColor="#000000"
                    android:textStyle="bold"
                    android:textSize="30sp"
                    android:gravity="center_horizontal|center_vertical"
                    android:layout_alignParentBottom="true"/>
            </RelativeLayout>
        </RelativeLayout>

        <ListView
            android:id="@+id/lstMenuLogin"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_gravity="start"
            android:background="@drawable/backrepeat"
            android:textColor="#424242"
            android:choiceMode="singleChoice"
            android:divider="@null"
            android:dividerHeight="0dp"/>
    </android.support.v4.widget.DrawerLayout>
</RelativeLayout>
